--- a/basic_image_processing.ipynb
+++ b/basic_image_processing.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Assignment 1 - Basic image processing\n",
+    "# Assignment 1 - Basic image processing\n",
     "\n",
-    "Description\n",
+    "### Description\n",
     "\n",
     "Basic scripting with Python\n",
     "\n",
@@ -21,7 +21,7 @@
     "    Create and save a file containing the filename, width, height for all of the new images.\n",
     "\n",
     "\n",
-    "General instructions\n",
+    "### General instructions\n",
     "\n",
     "    For this exercise, you can upload either a standalone script OR a Jupyter Notebook\n",
     "    Save your script as basic_image_processing.py OR basic_image_processing.ipynb\n",
@@ -32,7 +32,7 @@
     "    The filenames of the split images should clearly relate to the original image.\n",
     "\n",
     "\n",
-    "Purpose\n",
+    "### Purpose\n",
     "\n",
     "This assignment is designed to test that you have a understanding of:\n",
     "\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,6 +130,13 @@
     "    fmt='%s', #I'm not sure about this... I get an error without. I think It's about the the divided numbers\n",
     "    comments = \"\")#this is to remove the hashtag from the header"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
